# Commerce-Insight-Data-Pipeline

./: .gitignore  .gitignore_  .pre-commit-config.yaml  Dockerfile  README.md  connect_google_drive_sqlite_db.py  db_init.py  docker-compose.yml  init_table.sql  main.py  pyproject.toml  requirements.txt  start.sh  데이터 수집 방법.txt  메모.txt
.github/workflows/: main.yml
amazon_product/: Dockerfile  collect_executor.py  pyproject.toml
app/: amazon_product.py  main.py
src/: database.py  db_init.py  log.py  main.py
src/amazon_product/: Dockerfile  amazon_product.py  collect_executor.py
src/models/: db_table.py
src/twitter_user/: Dockerfile  collect_executor.py
twitter_user/: Dockerfile  collect_executor.py  pyproject.toml
